--- a/gdb/testsuite/ChangeLog
+++ b/gdb/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2003-07-27  Andrew Cagney  <cagney@redhat.com>
+
+	* gdb.base/fileio.exp: Use SH when running commands using
+	remote_exec.
+
 2003-07-24  Daniel Jacobowitz  <drow@mvista.com>
 
 	From Kei Sakamoto <sakamoto.kei@renesas.com>:
