--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,6 @@
+2003-08-07  Michal Ludvig  <mludvig@suse.cz>
+	* x86-64-tdep.c (x86_64_dwarf_regmap): Correct register numbers.
+
 2003-08-05  Andrew Cagney  <cagney@redhat.com>
 
 	* reggroups.c (reggroup_next): Check for the final entry.
