--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,10 +1,10 @@
 Mon Jul 21 20:10:16 UTC 2003  Brendan Conoboy  <blc@redhat.com>
 
-	* configure.host: Set gdb_host_cpu=arm when host_cpu=xscale
+	* configure.host: Set gdb_host_cpu=arm when host_cpu=xscale.
 
 Fri Aug  8 00:28:38 UTC 2003  Brendan Conoboy  <blc@redhat.com>
 
-	* MAINTAINERS (write after approval): Added self
+	* MAINTAINERS (write after approval): Added self.
 
 2003-08-07  Andrew Cagney  <cagney@redhat.com>
 
