--- a/gdb/gdbserver/ChangeLog
+++ b/gdb/gdbserver/ChangeLog
@@ -1,3 +1,8 @@
+2003-08-08  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* Makefile.in (install-only): Create dest dir. Support DESTDIR.
+	(uninstall): Support DESTDIR.
+
 Mon Jul 21 20:09:34 UTC 2003  Brendan Conoboy  <blc@redhat.com>
 
 	* configure.srv: Add xscale*linux copy of arm*linux entry.
