--- a/sim/ChangeLog
+++ b/sim/ChangeLog
@@ -1,3 +1,7 @@
+2003-08-10  Ben Elliston  <bje@wasabisystems.com>
+
+	* MAINTAINERS: Update my mail address.
+
 2003-08-09  Andrew Cagney  <cagney@redhat.com>
 
 	* MAINTAINERS: Andrew Cagney (mips) and Geoff Keating (ppc) drop
