--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,5 +1,7 @@
 2003-08-10  Mark Kettenis  <kettenis@gnu.org>
 
+	* frame.c (_initialize_frame): Add missing backslash.
+
 	From Peter Schauer (Peter.Schauer@regent.e-technik.tu-muenchen.de):
 	* sol-thread.c (sol_thread_store_registers): Use regcache_collect
 	and supply_register instead of manipulating the register buffer
