--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,5 +1,8 @@
 2003-08-10  Mark Kettenis  <kettenis@gnu.org>
 
+	* i387-tdep.c (i387_register_to_value): Use get_frame_register
+	instead of frame_read_register.
+
 	* i386fbsd-nat.c: Include "i386-tdep.h".
 	(child_resume): Make `eflags' an ULONGEST.  Use
 	regcache_cooked_read_unsigned and regcache_cooked_write_unsigned
