--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,7 @@
+2003-08-10  Andrew Cagney  <cagney@redhat.com>
+
+	* Makefile.in (monitor.o): Do not build monitor.c with -Werror.
+
 2003-08-10  Mark Kettenis  <kettenis@gnu.org>
 
 	* i386-tdep.h (i386fbsd_sigtramp_start, i386fbsd_sigtramp_end,
